--- a/src/components/GlobarStyles/GlobarStyles.scss
+++ b/src/components/GlobarStyles/GlobarStyles.scss
@@ -10,11 +10,14 @@
 }
 
 :root {
-    --primary-color: #fe2c55
+    --primary-color: #fe2c55;
+    --default-layout-width: 1150px;
 }
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
