--- a/src/components/GlobarStyles/GlobarStyles.scss
+++ b/src/components/GlobarStyles/GlobarStyles.scss
@@ -12,6 +12,8 @@
 :root {
     --primary-color: #fe2c55;
     --default-layout-width: 1150px;
+    --balck: #000;
+    --text-color: #333
 }
 
 * {
@@ -29,4 +31,27 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed; // tối ưu hiện thị font nhanh nhất
+    color: var(--text-color);
+
+}
+
+button {
+    cursor: pointer;
+}
+
+button,
+input,
+[tabindex] {
+    border: none;
+    outline: none;
+}
+
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
 }
