Xây dựng UI phần Header #2

--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -39,7 +39,7 @@
         background-color: transparent;
 
         &:not(:placeholder-shown)~.search-btn {
-            color: 161823bf;
+            color: #161823bf;
         }
     }
 
