--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -18,11 +18,14 @@
     justify-content: space-between;
 }
 
+.search,
+.search-result {
+    width: 361px;
 
+}
 
 .search {
     position: relative;
-    width: 361px;
     border: 1.5px solid transparent;
     height: var(--search-height);
     background-color: #1618230f;
@@ -57,6 +60,17 @@
     &:focus-within {
         border: 1.5px solid #c5c6c9;
     }
+}
+
+.search-title {
+    font-size: 1.4rem;
+    font-weight: 600;
+    padding: 5px 12px;
+    color: #16182380;
+}
+
+.logo {
+    cursor: pointer;
 }
 
 .clear,
