--- a/src/components/GlobarStyles/GlobarStyles.scss
+++ b/src/components/GlobarStyles/GlobarStyles.scss
@@ -13,6 +13,7 @@
     --primary-color: #fe2c55;
     --default-layout-width: 1150px;
     --balck: #000;
+    --white: #fff;
     --text-color: #333
 }
 
