--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -9,6 +9,7 @@
     border-radius: 4px;
     cursor: pointer;
     background-color: transparent;
+    color: var(--text-color);
     border: 1px solid rgba(22, 24, 35, 0.12);
 
     &:hover {
@@ -28,6 +29,11 @@
 .title+.icon,
 .icon+.title {
     margin-left: 8px;
+}
+
+.icon {
+    width: 24px;
+    text-align: center;
 }
 
 // Button type
