--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -101,3 +101,12 @@
     }
 
 }
+
+.more-btn {
+    font-size: 2rem;
+    margin-left: 26px;
+    padding:4px 8px;
+    cursor: pointer;
+    background-color: transparent;
+}
+
