Xây dựng UI phần Header #5

--- a/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -6,6 +6,7 @@
 
 .container {
     width: var(--default-layout-width);
+    padding-inline: var(--default-layout-horizontal-spacer);
     max-width: 100%;
     display: flex;
 }
