--- a/src/components/GlobarStyles/GlobarStyles.scss
+++ b/src/components/GlobarStyles/GlobarStyles.scss
@@ -11,10 +11,11 @@
 
 :root {
     --primary-color: #fe2c55;
-    --default-layout-width: 1150px;
     --balck: #000;
     --white: #fff;
-    --text-color: #161823
+    --text-color: #161823 ;
+    --default-layout-width: 1150px;
+    --default-layout-horizontal-spacer: 24px;
 }
 
 * {
