--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -103,10 +103,31 @@
 
 }
 
+// Action
+.action {
+    display: flex;
+    align-items: center;
+}
+
 .more-btn {
     font-size: 2rem;
     margin-left: 26px;
     padding: 4px 8px;
     cursor: pointer;
     background-color: transparent;
+}
+
+.action-btn {
+    font-size: 2rem;
+    color: var(--text-color);
+    background-color: transparent;
+    padding: 4px 11px;
+}
+
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 16px;
 }
