--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -15,6 +15,10 @@
     padding-block: 10px;
     justify-content: flex-start;
     line-height: 2.2rem;
+
+    &.separate {
+        border-top: 1px solid rgba(22, 24, 35, 0.12);
+    }
 }
 
 // Menu Header
@@ -36,7 +40,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     font-size: 1.6rem;
     font-weight: 600;
 }
