--- a/src/components/GlobarStyles/GlobarStyles.scss
+++ b/src/components/GlobarStyles/GlobarStyles.scss
@@ -1,12 +1,28 @@
 @import 'normalize.css';
 
+// Font emmbebed
 @font-face {
     font-family: "ProximaNova";
-    src: url(//lf16-tiktok-common.ttwstatic.com/obj/tiktok-web-common-sg/falcon/tiktok_fonts/Proxima-Nova-Bold.woff2) format("woff2"),
-        url(//lf16-tiktok-common.ttwstatic.com/obj/tiktok-web-common-sg/falcon/tiktok_fonts/Proxima-Nova-Bold.woff) format("woff"),
-        url(//lf16-tiktok-common.ttwstatic.com/obj/tiktok-web-common-sg/falcon/tiktok_fonts/Proxima-Nova-Bold.otf) format("opentype");
+    src: url('/assets/fonts/Proxima-Nova-Regular.woff2');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "ProximaNova";
+    src: url('/assets/fonts/Proxima-Nova-Semibold.woff2');
     font-weight: 600;
-    font-style: normal;
+}
+
+@font-face {
+    font-family: "ProximaNova";
+    src: url('/assets/fonts/Proxima-Nova-Bold.woff');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: "SofiaPro";
+    src: url('/assets/fonts/sofiapro-bold.woff2');
+    font-weight: 700;
 }
 
 :root {
@@ -29,7 +45,7 @@ html {
 }
 
 body {
-    font-family: ProximaNova;
+    font-family: 'ProximaNova',sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed; // tối ưu hiện thị font nhanh nhất
@@ -70,7 +86,8 @@ body {
         .tippy-arrow {
             color: rgba(84, 84, 84, 0.92);
         }
-        .tippy-content{
+
+        .tippy-content {
             padding: 8px 9px;
         }
     }
