--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -129,5 +129,6 @@
     height: 32px;
     object-fit: cover;
     border-radius: 50%;
-    margin-left: 16px;
+    margin-left: 14px;
+    cursor: pointer;
 }
