Sửa lỗi và hoàn thiện phần Header

--- a/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -5,6 +5,7 @@
 }
 
 .container {
+    margin-top: 60px;
     width: var(--default-layout-width);
     padding-inline: var(--default-layout-horizontal-spacer);
     max-width: 100%;
