--- a/src/components/GlobarStyles/GlobarStyles.scss
+++ b/src/components/GlobarStyles/GlobarStyles.scss
@@ -30,6 +30,8 @@
     --balck: #000;
     --white: #fff;
     --text-color: #161823;
+
+    --font-family: 'ProximaNova', sans-serif;
     --default-layout-width: 1150px;
     --default-layout-horizontal-spacer: 24px;
 }
@@ -44,12 +46,29 @@ html {
     font-size: 62.5%;
 }
 
+// Scrollbar Css
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 7px;
+}
+
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, .16);
+}
+
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+
 body {
-    font-family: 'ProximaNova',sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed; // tối ưu hiện thị font nhanh nhất
     color: var(--text-color);
+    overflow-y: overlay;
 
 }
 
