--- a/src/components/Layouts/components/Search/Search.module.scss
+++ b/src/components/Layouts/components/Search/Search.module.scss
@@ -12,6 +12,7 @@
     border-radius: var(--search-border-radius);
     padding-left: 16px;
     caret-color: var(--primary-color);
+    
     display: flex;
 
     input {
@@ -20,7 +21,7 @@
         color: var(--black);
         font-size: 1.6rem;
         background-color: transparent;
-
+        font-family: var( --font-family);
         &:not(:placeholder-shown)~.search-btn {
             color: #161823bf;
         }
