--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -7,6 +7,10 @@
     }
 }
 
+.menu-body {
+    overflow-y: auto;
+}
+
 // Menu item
 .menu-item {
     width: 100%;
@@ -26,6 +30,7 @@
     position: relative;
     height: 50px;
     margin-top: -8px;
+    flex-shrink: 0;
 }
 
 .back-btn {
