--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -2,7 +2,9 @@
     width: 100%;
     max-height: min((100vh - 96px) - 60px, 734px);
     padding-block: 8px;
-    background-color:var(--white);
+    background-color: var(--white);
     box-shadow: hwb(0 0% 100% / 0.12) 0px 2px 12px;
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
 }
