--- a/src/layouts/MainLayout/MainLayout.module.scss
+++ b/src/layouts/MainLayout/MainLayout.module.scss
@@ -8,10 +8,18 @@
     margin-top: 60px;
     width: var(--default-layout-width);
     padding-inline: var(--default-layout-horizontal-spacer);
-    max-width: 100%;
+    max-width: 100vw;
     display: flex;
+    justify-content: space-between;
 }
 
 .content {
-    flex: 1;
+    flex: 1 1;
+    padding: 24px 0;
+    width: 692px;
+    max-width: 692px;
+    height: 95vh;
+    // overflow-x: hidden;
+    // overflow-y: scroll;
+    // scroll-snap-type: y mandatory;
 }
