--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,6 +1,8 @@
-.wrapper{
+.wrapper {
     z-index: 999;
+    position: relative;
 }
+
 .overlay {
     position: fixed;
     top: 0;
@@ -16,7 +18,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 483px;
-    height: 80%;
+    // height: 80%;
     max-height: 693px;
     overflow: hidden;
     padding: 48px 0px 0px;
@@ -25,6 +27,8 @@
     border-radius: 8px;
     transition: all 300ms linear 0s;
 }
+
+
 
 .modal-close {
     position: absolute;
@@ -47,4 +51,14 @@
     align-items: center;
     height: 100%;
     overflow-y: auto;
+}
+
+.medium {
+    width: 400px;
+    padding-top: 32px;
+}
+
+.small {
+    width: 310px;
+    padding-top: 32px;
 }
