--- a/src/components/SuggestedAccounts/SuggestedAccounts.module.scss
+++ b/src/components/SuggestedAccounts/SuggestedAccounts.module.scss
@@ -33,6 +33,9 @@
 .info {
     flex: 1;
     margin-left: 12px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .nickname {
@@ -42,6 +45,11 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: normal;
+    span{
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
 }
 
 .check {
