--- a/src/layouts/MainLayout/MainLayout.module.scss
+++ b/src/layouts/MainLayout/MainLayout.module.scss
@@ -23,3 +23,15 @@
     // overflow-y: scroll;
     // scroll-snap-type: y mandatory;
 }
+
+.maxWidth {
+    width: var(--max-layout-width);
+}
+
+.content-max {
+    flex: 1 1 auto;
+    max-width: 1104px;
+    padding: 32px 24px;
+    min-height: calc(100vh - 59px);
+    margin: 0 auto;
+}
