--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -12,7 +12,7 @@
     border-radius: var(--search-border-radius);
     padding-left: 16px;
     caret-color: var(--primary-color);
-    
+
     display: flex;
 
     input {
@@ -21,8 +21,10 @@
         color: var(--black);
         font-size: 1.6rem;
         background-color: transparent;
-        font-family: var( --font-family);
+        font-family: var(--font-family);
         padding-right: 40px;
+        border: none;
+
         &:not(:placeholder-shown)~.search-btn {
             color: #161823bf;
         }
