--- a/src/pages/Upload/Upload.module.scss
+++ b/src/pages/Upload/Upload.module.scss
@@ -16,7 +16,6 @@
         border-radius: 8px;
         background-color: rgb(255, 255, 255);
         padding: 24px 40px;
-        height: 100vh;
     }
 
     .post-title {
@@ -48,9 +47,31 @@
         border: 2px dashed #d0d1d3;
         border-radius: 10px;
         position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        &:hover .upload {
+            background-color: rgba(22, 24, 35, 0.03);
+        }
     }
 
-    .upload-file {
+    .loading {
+        margin-left: -22%;
+    }
+
+    .uploader:has(.text-error) {
+        border: 2px dashed var(--primary-color);
+    }
+
+    .uploader .text-error {
+        color: var(--primary-color);
+        font-weight: 700;
+        font-size: 2rem;
+    }
+
+    .upload-video {
         position: absolute;
         top: 0;
         right: 0;
@@ -60,12 +81,16 @@
         cursor: pointer;
         opacity: 0;
         filter: alpha(opacity=0);
-        order: -1;
+
     }
+
+
+
 
     .upload {
         height: 100%;
         padding-inline: 35px;
+        text-align: center;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -76,6 +101,10 @@
         &:hover {
             background-color: rgba(22, 24, 35, 0.03);
         }
+    }
+
+    .video {
+        height: 100%;
     }
 
 
@@ -106,7 +135,486 @@
 
     .upload-button {
         margin-top: 32px;
-        width: 100%;
         height: 36px;
+    }
+
+
+    // Uploading
+    .upload-percent {
+        font-weight: 700;
+    }
+
+    .upload-progress {
+        width: 100%;
+        height: 7px;
+        color: rgba(22, 24, 35, 0.75);
+        background-color: #d0d1d3;
+        border-radius: 50px;
+    }
+
+    .upload-bar {
+        width: 0%;
+        height: 100%;
+        background-color: var(--primary-color);
+        border-radius: 50px;
+        background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.25) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, 0.25) 50%, rgba(0, 0, 0, 0.25) 75%, transparent 75%, transparent);
+        background-size: 1em 1em;
+        animation: barStripe 1s linear infinite;
+    }
+
+    .upload-name {
+        font-weight: 600;
+        font-size: 14px;
+        color: rgba(22, 24, 35, 0.75);
+        margin-top: 10px;
+    }
+
+    @keyframes barStripe {
+        0% {
+            background-position: 1em 0;
+        }
+
+        100% {
+            background-position: 0 0;
+        }
+    }
+
+    // Change Video
+
+    .change-video {
+        border: 1px solid rgba(22, 24, 35, 0.12);
+        margin-top: 16px;
+        width: 100%;
+        border-radius: 12px;
+        font-size: 12px;
+        padding: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .upload-file {
+        display: flex;
+        align-items: center;
+
+        .change-icon {
+            margin-right: 5px;
+            font-size: 1.4rem;
+        }
+    }
+
+    .change-btn {
+        font-weight: 600;
+        color: rgb(22, 24, 35);
+        cursor: pointer;
+        font-family: "SofiaPro";
+        line-height: 0.6;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+
+
+    // Upload Form
+    .upload-form {
+        margin-left: 24px;
+        flex: 1 1 0%;
+    }
+
+    .caption-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .text-limit {
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 17px;
+        color: rgba(22, 24, 35, 0.5);
+    }
+
+    .caption-editor {
+        width: 100%;
+        padding: 0px 80px 0px 16px;
+        position: relative;
+        border: 1px solid rgba(22, 24, 35, 0.12);
+        border-radius: 4px;
+        min-height: 46px;
+        display: flex;
+        align-items: center;
+        margin-top: 4px;
+
+    }
+
+    .caption-hashtag {
+        display: flex;
+        align-items: center;
+        position: absolute;
+        right: 12px;
+        font-size: 1.4rem;
+
+    }
+
+    .hashtag-icon {
+        cursor: pointer;
+
+        &:first-child {
+            margin-right: 20px;
+        }
+    }
+
+    .caption-input {
+        font-weight: 400;
+        font-size: 15px;
+        width: 637px;
+        max-height: 200px;
+        overflow-y: auto;
+        outline: none;
+        user-select: text;
+        white-space: pre-wrap;
+        overflow-wrap: break-word;
+        padding: 12px 0px;
+    }
+
+
+
+    .form-cover {
+        margin-top: 24px;
+    }
+
+    strong {
+        display: block;
+    }
+
+    .cover-editor {
+        width: 100%;
+        padding: 6px;
+        position: relative;
+        border: 1px solid rgba(22, 24, 35, 0.12);
+        border-radius: 4px;
+    }
+
+    .body-editor {
+        height: 154px;
+        border: 2px solid transparent;
+    }
+
+    .video-editor {
+        background-color: rgba(22, 24, 35, 0.03);
+        width: 85.75px;
+        height: 150px;
+        object-fit: cover;
+    }
+
+    .form-select {
+        width: 300px;
+        height: 36px;
+        border: 1px solid rgba(22, 24, 35, 0.12);
+        border-radius: 4px;
+        padding: 7px 12px;
+        font-size: 1.5rem;
+        font-weight: 400;
+        outline: none;
+
+        option {
+            width: 100%;
+            display: flex;
+            padding: 10px 12px;
+            line-height: 22px;
+            cursor: pointer;
+        }
+
+    }
+
+    .form-allows {
+        display: flex;
+        column-gap: 32px;
+        cursor: pointer;
+
+    }
+
+    .allows {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 10px;
+
+        input[type="checkbox"] {
+            width: 16px;
+            height: 16px;
+            flex-shrink: 0;
+            border-radius: 2px;
+            -webkit-appearance: none;
+            position: relative;
+            cursor: pointer;
+
+            &:hover {
+                border: 1px solid var(--primary-color);
+            }
+
+        }
+
+        input[type="checkbox"]:disabled {
+            opacity: 0.5;
+            /* tùy chỉnh độ mờ */
+            cursor: not-allowed;
+        }
+    }
+
+    input[type="checkbox"]:checked {
+        -webkit-appearance: none;
+        background-color: var(--primary-color);
+        color: #fff;
+        display: flex;
+        justify-content: center;
+
+        &:hover {
+            background: #ea284e;
+        }
+
+    }
+
+    input[type=checkbox]:checked:after {
+        content: "";
+        display: block;
+        width: 4px;
+        height: 8px;
+        border: solid white;
+        border-width: 0 2px 2px 0;
+        transform: rotate(45deg);
+
+    }
+
+    .hint {
+        margin-top: 21px;
+        font-size: 1.4rem;
+        font-weight: 400;
+        color: #16182380;
+    }
+
+
+    .form-switch {
+        margin-top: 24px;
+        margin-bottom: 6px;
+        display: flex;
+        align-items: center;
+
+        .switch-wrapper {
+            display: flex;
+            align-items: center;
+            margin-left: 14px;
+        }
+
+        input[type=checkbox] {
+            display: none;
+        }
+
+        label {
+            cursor: pointer;
+            text-indent: -9999px;
+            width: 44px;
+            height: 24px;
+            background-color: #1618231f;
+            display: flex;
+            align-items: center;
+            border-radius: 100px;
+            position: relative;
+        }
+
+        label:after {
+            content: '';
+            position: absolute;
+            left: 2px;
+            width: 20px;
+            height: 20px;
+            background: #fff;
+            border-radius: 90px;
+            transition: 0.3s;
+        }
+
+        input:checked+label {
+            background: #0be09b;
+        }
+
+        input:checked+label:after {
+            left: calc(100% - 2px);
+            transform: translateX(-100%);
+        }
+
+
+    }
+
+    .copyright {
+        font-size: 1.2rem;
+        font-weight: 400;
+        color: #16182380;
+
+        .more {
+            color: #161823;
+            font-weight: 600;
+        }
+    }
+
+    .tool-tip {
+        padding: 8px 12px;
+        border-radius: 4px;
+        height: 38px;
+        background-color: rgba(22, 24, 35, 0.06);
+        display: flex;
+        align-items: center;
+        margin-bottom: 6px;
+
+    }
+
+    .tool-check {
+        font-size: 1.3rem;
+        color: #0be09b;
+        margin-right: 6px;
+    }
+
+    .tool-warning {
+        font-size: 1.3rem;
+        color: red;
+        margin-right: 6px;
+    }
+
+    .tool-text {
+        font-size: 1.4rem;
+        font-weight: 400;
+        color: #16182380;
+    }
+
+    .form-button {
+        display: flex;
+        margin-top: 24px;
+
+        button {
+            width: 164px;
+            margin-right: 16px;
+            height: 48px;
+            padding-inline: 23px;
+        }
+
+        .button-post {
+            cursor: not-allowed;
+            pointer-events: unset;
+            color: #16182357;
+            background-color: #ebebeb;
+            border-color: #ebebeb;
+        }
+    }
+
+    .post-video {
+        width: 100%;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 32px;
+
+        .loader {
+            display: block;
+            position: relative;
+            height: 20px;
+            width: 200px;
+            background: #d0d1d3;
+            overflow: hidden;
+            font-weight: 700;
+            font-size: 1.4rem;
+            line-height: 20px;
+            border-radius: 5px;
+            margin-bottom: 16px;
+        }
+
+        .loader:after {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 100%;
+            width: 0;
+            background: var(--primary-color);
+            animation: 5s prog ease-in infinite;
+        }
+
+        @keyframes prog {
+            to {
+                width: 100%;
+            }
+
+            0% {
+                content: "0%"
+            }
+
+            5% {
+                content: "5%"
+            }
+
+            10% {
+                content: "10%"
+            }
+
+            20% {
+                content: "20%"
+            }
+
+            30% {
+                content: "30%"
+            }
+
+            40% {
+                content: "40%"
+            }
+
+            50% {
+                content: "50%"
+            }
+
+            60% {
+                content: "60%"
+            }
+
+            70% {
+                content: "70%"
+            }
+
+            80% {
+                content: "80%"
+            }
+
+            90% {
+                content: "90%"
+            }
+
+            95% {
+                content: "95%"
+            }
+
+            96% {
+                content: "96%"
+            }
+
+            97% {
+                content: "97%"
+            }
+
+            98% {
+                content: "98%"
+            }
+
+            99% {
+                content: "99%"
+            }
+
+            100% {
+                content: "100%"
+            }
+        }
+
+
     }
 }
